core/sireum-pilar-parser/src/main/java/org/sireum/pilar/parser/PilarParser.java
// Generated from /Users/robby/Repositories/Sireum-Private/sireumv3/core/sireum-pilar-parser/src/main/resources/org/sireum/pilar/parser/Pilar.g4 by ANTLR 4.5
package org.sireum.pilar.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PilarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
            T__17 = 18, T__18 = 19, T__19 = 20, T__20 = 21, T__21 = 22, T__22 = 23, T__23 = 24,
            LIT = 25, ID = 26, WS = 27, ERROR_CHAR = 28;
    public static final int
            RULE_model = 0, RULE_modelElement = 1, RULE_globalVarDecl = 2, RULE_procDecl = 3,
            RULE_param = 4, RULE_procBody = 5, RULE_localVarDecl = 6, RULE_location = 7,
            RULE_transformation = 8, RULE_action = 9, RULE_jump = 10, RULE_switchCase = 11,
            RULE_exp = 12, RULE_prim2 = 13, RULE_expSuffix = 14, RULE_prim = 15, RULE_arg = 16,
            RULE_lit = 17, RULE_annotation = 18;
    public static final String[] ruleNames = {
            "model", "modelElement", "globalVarDecl", "procDecl", "param", "procBody",
            "localVarDecl", "location", "transformation", "action", "jump", "switchCase",
            "exp", "prim2", "expSuffix", "prim", "arg", "lit", "annotation"
    };

	private static final String[] _LITERAL_NAMES = {
            null, "'var'", "';'", "'def'", "'('", "','", "')'", "'{'", "'}'", "'#'",
            "':'", "'call'", "':='", "'goto'", "'assert'", "'assume'", "'axt'", "'if'",
            "'then'", "'else'", "'return'", "'switch'", "'case'", "'jxt'", "'@'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, null, null, null, null, null, null, null, null, null, null, null,
            null, "LIT", "ID", "WS", "ERROR_CHAR"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	@NotNull
	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Pilar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PilarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ModelContext extends ParserRuleContext {
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public List<ModelElementContext> modelElement() {
			return getRuleContexts(ModelElementContext.class);
		}
		public ModelElementContext modelElement(int i) {
			return getRuleContext(ModelElementContext.class,i);
		}
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_model);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
                setState(41);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__23) {
                    {
                        {
                            setState(38);
                            annotation();
                        }
                    }
                    setState(43);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(45);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(44);
                            modelElement();
                        }
                    }
                    setState(47);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == T__0 || _la == T__2);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

	public static class ModelElementContext extends ParserRuleContext {
		public ModelElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modelElement; }

        public ModelElementContext() {
        }

        public void copyFrom(ModelElementContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class GlobalVarContext extends ModelElementContext {
        public List<GlobalVarDeclContext> globalVarDecl() {
            return getRuleContexts(GlobalVarDeclContext.class);
        }

        public GlobalVarDeclContext globalVarDecl(int i) {
            return getRuleContext(GlobalVarDeclContext.class, i);
        }

        public GlobalVarContext(ModelElementContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class ProcedureContext extends ModelElementContext {
        public ProcDeclContext procDecl() {
            return getRuleContext(ProcDeclContext.class, 0);
        }

        public ProcedureContext(ModelElementContext ctx) {
            copyFrom(ctx);
        }
    }

	public final ModelElementContext modelElement() throws RecognitionException {
		ModelElementContext _localctx = new ModelElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_modelElement);
        int _la;
        try {
            setState(56);
            switch (_input.LA(1)) {
                case T__0:
                    _localctx = new GlobalVarContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(49);
                    match(T__0);
                    setState(51);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    do {
                        {
                            {
                                setState(50);
                                globalVarDecl();
                            }
                        }
                        setState(53);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    } while (_la == ID);
                }
                break;
                case T__2:
                    _localctx = new ProcedureContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(55);
                    procDecl();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
		}
		return _localctx;
	}

	public static class GlobalVarDeclContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(PilarParser.ID, 0);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public GlobalVarDeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_globalVarDecl;
        }
    }

	public final GlobalVarDeclContext globalVarDecl() throws RecognitionException {
		GlobalVarDeclContext _localctx = new GlobalVarDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_globalVarDecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(58);
                match(ID);
                setState(62);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__23) {
                    {
                        {
                            setState(59);
                            annotation();
                        }
                    }
                    setState(64);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(65);
                match(T__1);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

	public static class ProcDeclContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(PilarParser.ID, 0);
        }

        public List<ParamContext> param() {
            return getRuleContexts(ParamContext.class);
        }

        public ParamContext param(int i) {
            return getRuleContext(ParamContext.class, i);
        }

        public ProcBodyContext procBody() {
            return getRuleContext(ProcBodyContext.class, 0);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public ProcDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procDecl; }
	}

	public final ProcDeclContext procDecl() throws RecognitionException {
		ProcDeclContext _localctx = new ProcDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_procDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
                setState(67);
                match(T__2);
                setState(68);
                match(ID);
                setState(69);
                match(T__3);
                setState(70);
                param();
                setState(75);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__4) {
                    {
                        {
                            setState(71);
                            match(T__4);
                            setState(72);
                            param();
                        }
                    }
                    setState(77);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(78);
                match(T__5);
                setState(82);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__23) {
                    {
                        {
                            setState(79);
                            annotation();
                        }
                    }
                    setState(84);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(87);
                switch (_input.LA(1)) {
                    case T__6: {
                        setState(85);
                        procBody();
                    }
                    break;
                    case T__1: {
                        setState(86);
                        match(T__1);
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

	public static class ParamContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(PilarParser.ID, 0);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public ParamContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_param;
        }
    }

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_param);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(89);
                match(ID);
                setState(93);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__23) {
                    {
                        {
                            setState(90);
                            annotation();
                        }
                    }
                    setState(95);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

	public static class ProcBodyContext extends ParserRuleContext {
		public List<LocationContext> location() {
			return getRuleContexts(LocationContext.class);
		}
		public LocationContext location(int i) {
			return getRuleContext(LocationContext.class,i);
		}

        public List<LocalVarDeclContext> localVarDecl() {
            return getRuleContexts(LocalVarDeclContext.class);
        }

        public LocalVarDeclContext localVarDecl(int i) {
            return getRuleContext(LocalVarDeclContext.class, i);
        }

        public ProcBodyContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_procBody;
        }
    }

	public final ProcBodyContext procBody() throws RecognitionException {
		ProcBodyContext _localctx = new ProcBodyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_procBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
                setState(96);
                match(T__6);
                setState(103);
                _la = _input.LA(1);
                if (_la == T__0) {
                    {
                        setState(97);
                        match(T__0);
                        setState(99);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        do {
                            {
                                {
                                    setState(98);
                                    localVarDecl();
                                }
                            }
                            setState(101);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        } while (_la == ID);
                    }
                }

                setState(106);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(105);
                            location();
                        }
                    }
                    setState(108);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == T__8);
                setState(110);
                match(T__7);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

	public static class LocalVarDeclContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(PilarParser.ID, 0);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public LocalVarDeclContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_localVarDecl;
        }
    }

	public final LocalVarDeclContext localVarDecl() throws RecognitionException {
		LocalVarDeclContext _localctx = new LocalVarDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_localVarDecl);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(112);
                match(ID);
                setState(116);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__23) {
                    {
                        {
                            setState(113);
                            annotation();
                        }
                    }
                    setState(118);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(119);
                match(T__1);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

	public static class LocationContext extends ParserRuleContext {
        public TerminalNode ID() {
            return getToken(PilarParser.ID, 0);
        }

        public TransformationContext transformation() {
            return getRuleContext(TransformationContext.class, 0);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public LocationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_location;
        }
    }

	public final LocationContext location() throws RecognitionException {
		LocationContext _localctx = new LocationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_location);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
                setState(121);
                match(T__8);
                setState(122);
                match(ID);
                setState(123);
                match(T__9);
                setState(127);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == T__23) {
                    {
                        {
                            setState(124);
                            annotation();
                        }
                    }
                    setState(129);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(130);
                transformation();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

	public static class TransformationContext extends ParserRuleContext {
        public TransformationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_transformation;
        }

        public TransformationContext() {
        }

        public void copyFrom(TransformationContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class CallContext extends TransformationContext {
        public Token p;
        public Token l;

        public ArgContext arg() {
            return getRuleContext(ArgContext.class, 0);
        }

        public List<TerminalNode> ID() {
            return getTokens(PilarParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(PilarParser.ID, i);
        }

        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public CallContext(TransformationContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class BlockContext extends TransformationContext {
        public JumpContext jump() {
            return getRuleContext(JumpContext.class, 0);
        }

        public List<ActionContext> action() {
            return getRuleContexts(ActionContext.class);
        }

        public ActionContext action(int i) {
            return getRuleContext(ActionContext.class, i);
        }

        public BlockContext(TransformationContext ctx) {
            copyFrom(ctx);
        }
    }

	public final TransformationContext transformation() throws RecognitionException {
		TransformationContext _localctx = new TransformationContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_transformation);
		int _la;
		try {
            setState(151);
            switch (_input.LA(1)) {
                case T__10:
                    _localctx = new CallContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(132);
                    match(T__10);
                    setState(136);
                    switch (getInterpreter().adaptivePredict(_input, 14, _ctx)) {
                        case 1: {
                            setState(133);
                            exp();
                            setState(134);
                            match(T__11);
                        }
                        break;
                    }
                    setState(138);
                    ((CallContext) _localctx).p = match(ID);
                    setState(139);
                    arg();
                    setState(140);
                    match(T__12);
                    setState(141);
                    ((CallContext) _localctx).l = match(ID);
                    setState(142);
                    match(T__1);
                }
                break;
                case T__3:
                case T__12:
                case T__13:
                case T__14:
                case T__15:
                case T__16:
                case T__19:
                case T__20:
                case T__22:
                case ID:
                    _localctx = new BlockContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(147);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << ID))) != 0)) {
                        {
                            {
                                setState(144);
                                action();
                            }
                        }
                        setState(149);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(150);
                    jump();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
	}

	public static class ActionContext extends ParserRuleContext {
        public ActionContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_action;
        }

        public ActionContext() {
        }

        public void copyFrom(ActionContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class ExtActionContext extends ActionContext {
        public TerminalNode ID() {
            return getToken(PilarParser.ID, 0);
        }

        public ArgContext arg() {
            return getRuleContext(ArgContext.class, 0);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public ExtActionContext(ActionContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class AssignActionContext extends ActionContext {
        public ExpContext l;
        public ExpContext r;

        public List<ExpContext> exp() {
            return getRuleContexts(ExpContext.class);
        }

        public ExpContext exp(int i) {
            return getRuleContext(ExpContext.class, i);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public AssignActionContext(ActionContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class AssumeActionContext extends ActionContext {
        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public AssumeActionContext(ActionContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class AssertActionContext extends ActionContext {
        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public AssertActionContext(ActionContext ctx) {
            copyFrom(ctx);
        }
    }

	public final ActionContext action() throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_action);
		int _la;
		try {
            setState(195);
            switch (_input.LA(1)) {
                case T__3:
                case ID:
                    _localctx = new AssignActionContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(153);
                    ((AssignActionContext) _localctx).l = exp();
                    setState(154);
                    match(T__11);
                    setState(155);
                    ((AssignActionContext) _localctx).r = exp();
                    setState(159);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == T__23) {
                        {
                            {
                                setState(156);
                                annotation();
                            }
                        }
                        setState(161);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(162);
                    match(T__1);
                }
                break;
                case T__13:
                    _localctx = new AssertActionContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(164);
                    match(T__13);
                    setState(165);
                    exp();
                    setState(169);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == T__23) {
                        {
                            {
                                setState(166);
                                annotation();
                            }
                        }
                        setState(171);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(172);
                    match(T__1);
                }
                break;
                case T__14:
                    _localctx = new AssumeActionContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                {
                    setState(174);
                    match(T__14);
                    setState(175);
                    exp();
                    setState(179);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == T__23) {
                        {
                            {
                                setState(176);
                                annotation();
                            }
                        }
                        setState(181);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(182);
                    match(T__1);
                }
                break;
                case T__15:
                    _localctx = new ExtActionContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                {
                    setState(184);
                    match(T__15);
                    setState(185);
                    match(ID);
                    setState(186);
                    arg();
                    setState(190);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    while (_la == T__23) {
                        {
                            {
                                setState(187);
                                annotation();
                            }
                        }
                        setState(192);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    }
                    setState(193);
                    match(T__1);
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
	}

	public static class JumpContext extends ParserRuleContext {
        public JumpContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_jump;
        }

        public JumpContext() {
        }

        public void copyFrom(JumpContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class ExtJumpContext extends JumpContext {
        public TerminalNode ID() {
            return getToken(PilarParser.ID, 0);
        }

        public ArgContext arg() {
            return getRuleContext(ArgContext.class, 0);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public ExtJumpContext(JumpContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class SwitchJumpContext extends JumpContext {
        public Token b;
        public Token u;
        public Token t;

        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public List<TerminalNode> ID() {
            return getTokens(PilarParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(PilarParser.ID, i);
        }

        public List<SwitchCaseContext> switchCase() {
            return getRuleContexts(SwitchCaseContext.class);
        }

        public SwitchCaseContext switchCase(int i) {
            return getRuleContext(SwitchCaseContext.class, i);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public SwitchJumpContext(JumpContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class GotoJumpContext extends JumpContext {
        public TerminalNode ID() {
            return getToken(PilarParser.ID, 0);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public GotoJumpContext(JumpContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class IfJumpContext extends JumpContext {
        public Token t;
        public Token f;

        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public List<TerminalNode> ID() {
            return getTokens(PilarParser.ID);
        }

        public TerminalNode ID(int i) {
            return getToken(PilarParser.ID, i);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public IfJumpContext(JumpContext ctx) {
            copyFrom(ctx);
        }
    }

    public static class ReturnJumpContext extends JumpContext {
        public ExpContext exp() {
            return getRuleContext(ExpContext.class, 0);
        }

        public List<AnnotationContext> annotation() {
            return getRuleContexts(AnnotationContext.class);
        }

        public AnnotationContext annotation(int i) {
            return getRuleContext(AnnotationContext.class, i);
        }

        public ReturnJumpContext(JumpContext ctx) {
            copyFrom(ctx);
        }
    }
